fix: search field spacing

--- a/src/static/home/main.css
+++ b/src/static/home/main.css
@@ -56,6 +56,7 @@ footer a:active {
 .search-delete-btn {
     height: calc(1.5rem + calc(var(--input-padding-y) * 2));
     margin-bottom: 1rem;
+    margin-left: 3px;
 }
 
 .custom-select{
